--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,14 +20,17 @@ jobs:
           uses: actions/setup-python@v2
           with:
             python-version: 3.9
+        - uses: Gr1N/setup-poetry@v8
+          with:
+            poetry-version: "1.4.0"
         - name: Install dependencies
           run: |
             poetry install
         - name: Run Code Coverage
           run: |
-            coverage run -m pytest
+            poetry run coverage run -m pytest
         - name: Upload Code Coverage
           uses: codecov/codecov-action@v3
           with:
             token: ${{ secrets.CODECOV_TOKEN }}
-            file: ./coverage.xml
+            file: .coverage
